--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-    김현솔
+    <h1>김현솔의 첫번째 html 파일입니다.</h1>
+
+    <ul>
+        <li><a href="html01.html" target="_blank">html 01</a></li>
+    </ul>
+
+    <section>
+        <h2>선택자실습</h2>
+        <ul>
+            <li><a href="selector01.html" target="_blank">selector01</a></li>
+        </ul>
+
 </body>
 
 </html>
