--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             <li><a href="selector01.html" target="_blank">selector01</a></li>
             <li><a href="selector02.html" target="_blank">selector02</a></li>
         </ul>
-
+        <h2>리셋실습</h2>
+        <ul>
+            <li><a href="reset" </li>
+        </ul>
 </body>
 
 </html>
