--- a/reset.html
+++ b/reset.html
@@ -7,21 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        /*  */
-        h1 {
-            color: tomato;
-            color: tomato;
+        * {
+            font-size: inherit;
+            font-weight: inherit;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
 
-
-
-        li {
-            color: tomato;
-            color: blue;
+        ul,
+        ol {
+            list-style: none;
         }
 
-        ul {
-            color: #ddd;
+        a {
+            color: inherit;
+            text-decoration: none;
+        }
+
+        em,
+        i,
+        address {
+            font-style: normal;
+        }
+
+        body {
+            line-height: 1;
         }
     </style>
 </head>
@@ -31,7 +42,7 @@
     <div>HTML 01</div>
 
     <!--제목 box -->
-    <h1 style="color:blue;">html 01</h1>
+    <h1>html 01</h1>
     <h2>html 01</h2>
     <h3>html 01</h3>
     <h4>html 01</h4>
