--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
         <h2>리셋실습</h2>
         <ul>
             <li><a href="reset.html" target="_blank">reset</a></li>
-            <li><a href="display01.html" target="_blank">display01.html</a></li>
-            <li><a href="layout01.html" target="_blank">layout01.html</a></li>
-            <li><a href="html01.html" target="_blank">html01.html</a></li>
+            <li><a href="display01.html" target="_blank">display01</a></li>
+            <li><a href="layout01.html" target="_blank">layout01</a></li>
         </ul>
 </body>
 
